Gloable Änderungen und Korrekturen + neue Acronym-Bib

--- a/Acronym.tex
+++ b/Acronym.tex
@@ -1,60 +1,54 @@
-\chapter{Abkürzungsverzeichnis}
-% Siehe Paket acronym !!
-\begin{acronym}[REKOM]% in [] das längste Acronym (zur optischen ausrichtung)
-	
-	\acro{CCPS}{cardioscan Checkpoint Software}
-	\acro{VT1}{1. Ventilatorische Schwelle}
-	\acro{VT2}{2. Ventilatorische Schwelle}
-	\acro{RQ}{Respiratorischer Quotient}
-	\acro{CO2}[CO\textsubscript{2}]{Kohlenstoffdioxid}
-	\acro{O2}[O\textsubscript{2}]{Sauerstoff}
-	\acro{VCO2}[\.{V}CO\textsubscript{2}]{Kohlenstoffdioxidabgabe}
-	\acro{VO2}[\.{V}O\textsubscript{2}]{Sauerstoffaufnahme}
-	\acro{ATP}{Adenosintriphosphat}
-	\acro{ADP}{Adenosindiphosphat}
-	\acro{P}[P\textsubscript{i}]{Phophat}
-	\acro{H2O}[H\textsubscript{2}O]{Wasser}
-	\acro{H+}[H\textsuperscript{+}]{Wasserstoff}
-	\acro{CrP}{Kreatinphosphat}
-	\acro{Cr}{Kreatin}
-	\acro{NADH}{Nicotinamidadenindinukleotid}
-	\acro{HLa}{Milchsäure}
-	\acro{La-}[La\textsuperscript{-}]{Laktat}
-	\acro{LDH}{Laktatdehydrogenase}
-	\acro{HCO3-}[HCO\textsubscript{3}\textsuperscript{-}]{Bicarbonat}
-	\acro{H2CO3}[H\textsubscript{2}CO\textsubscript{3}]{Kohlensäure}
-	\acro{RCP}{Respiratorischer Kompensationspunkt nach Wasserman (1981)}
-	\acro{MLSS}{Maximales Laktat-Steady-State}
-	\acro{VE}[\.{V}E]{Ventilation}
-	\acro{AMV}{Atemminutenvolumen}
-	\acro{FIO2}[FIO\textsubscript{2}]{Fraktion des inspirierten Sauerstoffs}
-	\acro{FEO2}[FEO\textsubscript{2}]{Fraktion des exspirierten Sauerstoffs}
-	\acro{FECO2}[FECO\textsubscript{2}]{Fraktion des exspirierten Kohlenstoffdioxids}
-	\acro{COPD}{chronisch obstruktive Lungenerkrankung}
-	\acro{EQCO2}[EQCO\textsubscript{2}]{Kohlenstoffdioxid-Äquivalent}
-	\acro{EQO2}[EQO\textsubscript{2}]{Sauerstoff-Äquivalent}
-	\acro{W}{Leistung}
-	\acro{WL}{"`work load"', Leistung bzw. Belastungsintensität}
-	\acro{POW}{Punkt des maximalen Wirkungsgrades nach Hollmann (1959)}
-	\acro{EKG}{Elektrokardiogramm}
-	\acro{HF}{Herzfrequenz}
-	\acro{CSI}{Cardio-Stress-Index}
-	\acro{SHIP}{Study of Health in Pomerania}
-	\acro{Wmax}[W\textsubscript{max}]{maximale Leistung}
-	\acro{Wstart}[W\textsubscript{Start}]{Anfangsbelastung}
-	\acro{WHO}{Weltgesundheitsorganisation}
-	\acro{BAL}{Bundesausschuss Leistungssport}
-	\acro{AF}{Atemfrequenz}
-	\acro{CSV}{Comma-separated values}
-	\acro{ID}{Identifikator}
-	\acro{HFmax}[HF\textsubscript{max}]{maximal erreichte Herzfrequenz}
-	\acro{VO2max}[VO\textsubscript{2max}]{absolute maximale Sauerstoffaufnahme}
-	\acro{SD}{Standardabweichung}
-	\acro{REKOM}{Regeneratives/Kompensatorisches Training}
-	\acro{GA1}{Extensives Grundlagentraining}
-	\acro{GA2}{Intensives Grundlagentraining}
-	\acro{EW}{Entwicklungsbereich}
-	\acro{FEV1}{exspiratorische Einsekundenkapazität (forced expiratory volume in 1 second)}
-	\acro{FVC}{forcierte Vitalkapazität}
-	
-\end{acronym}
+	\newacronym{CCPS}{CCPS}{cardioscan Checkpoint Software}
+	\newacronym{VT1}{VT1}{1. Ventilatorische Schwelle}
+	\newacronym{VT2}{VT2}{2. Ventilatorische Schwelle}
+	\newacronym[user1=Respiratorische Quotient]{RQ}{RQ}{Respiratorischer Quotient}
+	\newacronym{CO2}{CO\textsubscript{2}}{Kohlenstoffdioxid}
+	\newacronym{O2}{O\textsubscript{2}}{Sauerstoff}
+	\newacronym{VCO2}{\.{V}CO\textsubscript{2}}{Kohlenstoffdioxidabgabe}
+	\newacronym{VO2}{\.{V}O\textsubscript{2}}{Sauerstoffaufnahme}
+	\newacronym{ATP}{ATP}{Adenosintriphosphat}
+	\newacronym{ADP}{ADP}{Adenosindiphosphat}
+	\newacronym{P}{P\textsubscript{i}}{Phosphat}
+	\newacronym{H2O}{H\textsubscript{2}O}{Wasser}
+	\newacronym{H+}{H\textsuperscript{+}}{Wasserstoff}
+	\newacronym{CrP}{CrP}{Kreatinphosphat}
+	\newacronym{Cr}{Cr}{Kreatin}
+	\newacronym{NADH}{NADH/H\textsuperscript{+}}{Nicotinamidadenindinukleotid}
+	\newacronym{HLa}{HLa}{Milchsäure}
+	\newacronym{La-}{La\textsuperscript{-}}{Laktat}
+	\newacronym{LDH}{LDH}{Laktatdehydrogenase}
+	\newacronym{HCO3-}{HCO\textsubscript{3}\textsuperscript{-}}{Bicarbonat}
+	\newacronym{H2CO3}{H\textsubscript{2}CO\textsubscript{3}}{Kohlensäure}
+	\newacronym{RCP}{RCP}{Respiratorischer Kompensationspunkt nach Wasserman (1981)}
+	\newacronym[user1=Maximalen Laktat-Steady-States]{MLSS}{MLSS}{Maximales Laktat-Steady-State}
+	\newacronym{VE}{\.{V}E}{Ventilation}
+	\newacronym{AMV}{AMV}{Atemminutenvolumen}
+	\newacronym{FIO2}{FIO\textsubscript{2}}{Fraktion des inspirierten Sauerstoffs}
+	\newacronym[user1=exspirierten Sauerstoffs]{FEO2}{FEO\textsubscript{2}}{Fraktion des exspirierten Sauerstoffs}
+	\newacronym{FECO2}{FECO\textsubscript{2}}{Fraktion des exspirierten Kohlenstoffdioxids}
+	\newacronym[user1=chronisch obstruktiven Lungenerkrankung]{COPD}{COPD}{chronisch obstruktive Lungenerkrankung}
+	\newacronym[user1=Kohlenstoffdioxid-Äquivalents]{EQCO2}{EQCO\textsubscript{2}}{Kohlenstoffdioxid-Äquivalent}
+	\newacronym[user1=Sauerstoff-Äquivalents]{EQO2}{EQO\textsubscript{2}}{Sauerstoff-Äquivalent}
+	\newacronym{W}{W}{Leistung}
+	\newacronym{WL}{WL}{"`work load"', Leistung bzw. Belastungsintensität}
+	\newacronym{POW}{POW}{Punkt des optimalen Wirkungsgrades}
+	\newacronym[user1=Elektrokardiogrammen]{EKG}{EKG}{Elektrokardiogramm}
+	\newacronym{HF}{HF}{Herzfrequenz}
+	\newacronym{CSI}{CSI}{Cardio-Stress-Index}
+	\newacronym{SHIP}{SHIP}{Study of Health in Pomerania}
+	\newacronym[user1=maximalen Leistung]{Wmax}{W\textsubscript{max}}{maximale Leistung}
+	\newacronym{Wstart}{W\textsubscript{Start}}{Anfangsbelastung}
+	\newacronym{WHO}{WHO}{Weltgesundheitsorganisation}
+	\newacronym[user1=Bundesauschusses für Leistungssport]{BAL}{BAL}{Bundesausschuss für Leistungssport}
+	\newacronym{AF}{AF}{Atemfrequenz}
+	\newacronym{CSV}{CSV}{Comma-separated values}
+	\newacronym{ID}{ID}{Identifikator}
+	\newacronym{HFmax}{HF\textsubscript{max}}{maximal erreichte Herzfrequenz}
+	\newacronym{VO2max}{\.{V}O\textsubscript{2max}}{absolute maximale Sauerstoffaufnahme}
+	\newacronym{SD}{SD}{Standardabweichung}
+	\newacronym{REKOM}{REKOM}{Regeneratives/Kompensatorisches Training}
+	\newacronym{GA1}{GA1}{Extensives Grundlagentraining}
+	\newacronym{GA2}{GA2}{Intensives Grundlagentraining}
+	\newacronym{EW}{EW}{Entwicklungsbereich}
+	\newacronym{FEV1}{FEV1}{exspiratorische Einsekundenkapazität (forced expiratory volume in 1 second)}
+	\newacronym{FVC}{FVC}{forcierte Vitalkapazität}
