--- a/BA.tex
+++ b/BA.tex
@@ -28,7 +28,7 @@ ngerman
 
 \input{header.tex}
 \input{macros.tex}
-
+\input{Acronym.tex}
 
 
 \begin{document} 
@@ -41,7 +41,7 @@ ngerman
 	\pagenumbering{Roman} 
 	\setcounter{page}{1}
 	\tableofcontents
-	\input{Acronym.tex}
+	\printglossary[title=Abkürzungsverzeichnis]
 	\clearpage
 	\listoffigures
 	\listoftables
