--- a/Anhang.tex
+++ b/Anhang.tex
@@ -1,5 +1,5 @@
 \chapter{Technische Daten des Flowsensors}
 \includepdf[pages=3]{Anhang/FS6112H.pdf}
 
-\chapter{Technische Daten des \acs{VCO2}/\acs{VO2}-Sensor-Moduls}
+\chapter{Technische Daten des \gls{VCO2}/\gls{VO2}-Sensor-Moduls}
 \includepdf[pages=3-7]{Anhang/AION.pdf}
