--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -13,9 +13,9 @@ Anschließend werden potentielle Fehlerquellen sowie eventuelle Defizite der Dur
 
 \section{Spiroergometrie mit dem metabolicscan}
 
-Da nach den Spiroergometrie-Tests für alle Probanden Plots generiert wurden, in denen die Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar und nachvollziehbar waren, kann geschlussfolgert werden, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung eine Spiroergometrie genutzt werden kann. Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene Atemfrequenz bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb der Grenzen des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des Maximums des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} und unterschiedlichen Gaskonzentrationen kalibriert, weswegen ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wurde jeder bisher produzierte metabolicscan geprüft und mithilfe der Ergebnisse eine Ausgleichskurve für die Flowmessung entwickelt, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden.\\
+Da nach den Spiroergometrie-Tests für alle Probanden Plots generiert wurden, in denen die Veränderungen der \gls{VE}, \gls{VO2} und \gls{VCO2} erkennbar und nachvollziehbar waren, kann geschlussfolgert werden, dass der metabolicscan in Verbindung mit der \gls{CCPS} und Fahrradergometern grundsätzlich zur Durchführung der Spiroergometrie genutzt werden kann. Während der Messungen wurden keine Störungen oder Fehler der verbauten Sensoren festgestellt. Die maximal gemessene \gls{AF} bei den Testmessungen betrug \SI{52,5}{\per\minute} und liegt damit innerhalb der Grenzen des \gls{O2}-Sensors. Mit \SI{136,27}{\litre\per\minute} befindet sich auch die maximal gemessene \gls{VE} unterhalb des Maximums des Flowsensors. Der metabolicscan wurde vor dem Projekt mithilfe eines Lungensimulators bei Atemfrequenzen zwischen \SIlist{6;50}{\per\minute} und unterschiedlichen Gaskonzentrationen kalibriert, weswegen ausgeschlossen werden kann, dass die Sensoren fehlerhaft waren. Zudem wird jeder produzierte metabolicscan mithilfe einer Ausgleichskurve für die Flowmessung angepasst, die in die Gerätekalibrierung zu Beginn einer Messung implementiert ist. Dennoch können Abweichungen in der Messtechnik nicht vollkommen ausgeschlossen werden.\\
 \clearpage
-Alle Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv und unbeeinflusst von anderen Personen in die Kategorien Gut und Kritisch einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan gute Plots zur Schwellenbestimmung erstellt werden. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur sehr differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
+Alle Grafiken wurden bezüglich ihrer Qualität zunächst subjektiv und unbeeinflusst von anderen Personen in die Kategorien Gut und Kritisch einsortiert, um zu überprüfen, ob mit den Rohdaten des metabolicscan hinreichende Plots zur Schwellenbestimmung erstellt werden. Plots, die optisch mithilfe einer jeweiligen Methode direkt auszuwerten waren und außerdem keine schwerwiegenden Artefakte aufwiesen, wurden als gut deklariert. In die Rubrik Kritisch kamen jene Graphen, die beispielsweise unregelmäßige Kurvenverläufe aufwiesen und dadurch nur sehr differenziert evaluiert werden konnten. Tab. \ref{tab:tabelle7} zeigt die Kategorien und Zuordnungen.
 %
 \begin{table}[H]
 	\begin{center}
@@ -48,15 +48,15 @@ Mit 64~\% wurde der Großteil aller Plots zur Bestimmung der VT1 als kritisch be
 Nachfolgend werden Eigenschaften aufgelistet, anhand derer ein einzelner Plot als gut deklariert wurde. Um gut auswerten zu können, mussten die V-Slope-Kurven und die dazugehörigen \gls{HF}-Kurven differenzierbar sein. Nur so konnte der überproportionale Anstieg der \gls{VCO2} erkannt werden. War diese Eigenschaft nicht erfüllt, wenn es beim V-Slope für einen X-Wert mehrere Y-Werte gab, so wurde der Graph als kritisch bezeichnet. Einige V-Slopes besaßen allerdings auch sehr dicht beieinander gelegene Messpunkte, sodass Steigungsänderungen optisch schwierig zu erkennen waren. Auch diese Plots wurden als kritisch kategorisiert.\\
 Bei guten \gls{EQO2}-Kurven wurde für die VT1-Bestimmung erwartet, dass sie einen eindeutig zu detektierenden Tiefpunkt besaßen, auf den eine von dort an stetige Zunahme folgte. Wenn die Kurven jedoch Schwankungen innehatten oder aber mehrere, optisch auf relativ gleicher Höhe liegende Tiefpunkte aufwiesen, waren sie kritisch.\\
 Ähnliches galt für die VT2-Bestimmung mittels \gls{EQCO2}. Gut waren die Graphen, die eine annähernd Badewannen-ähnliche Form besaßen, sodass im fortgeschrittenen Messverlauf ein deutlich sichtbarer Anstieg zu erkennen war. Es wurden bei den Tests jedoch auch Plots generiert, in denen diese Kurven ebenfalls Schwankungen aufwiesen, sodass mehrere, potentiell als VT2 assoziierbare \gls{EQCO2}-Steigungen existierten. Diese Grafiken galten als kritisch.\\
-Für die \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den V-Slope. Auch diese Graphen mussten differenzierbar sein und durften keine zackigen Verläufe annehmen. Auch hier sorgten einige Messpunkte mit optisch geringem Abstand für eine erschwerte, kritische Schwellenbestimmung. 
+Für \gls{VE}/\gls{VCO2} wurden ähnliche Voraussetzungen gestellt, wie für den V-Slope. Auch diese Graphen mussten differenzierbar sein und durften keine zackigen Verläufe annehmen. Auch hier sorgten einige Messpunkte mit optisch geringem Abstand für eine erschwerte, kritische Schwellenbestimmung. 
 %
 \section{Evaluierung der Methoden zur Schwellenbestimmung}
 %
-Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Dadurch könnte der V-Slope zur Bestimmung der VT1 verbessert werden. Hierzu müssten neue Testmessungen bzw. eine erneute Auswertung der neu generierten Plots durchgeführt werden, was jedoch der zeitliche Rahmen dieser Arbeit nicht zuließ. Dies zeigt jedoch bereits, dass eine weiterführende Optimierung der Algorithmen zu anderen Erkenntnissen führen kann.
+Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der grafischen Auswertung der Rohdaten vorgenommen. In Folge der Analyse der erstellten Grafiken wurde ein Fehler im MATLAB-Skript bei der Berechnung der \gls{AF} anhand des gemessenen Flows festgestellt. Es sollten zukünftig neue Testmessungen bzw. eine erneute Auswertung der neu generierten Plots durchgeführt werden, da die Erkenntnisse dadurch abweichen können. Dies lies allerdings der zeitliche Rahmen der Arbeit nicht zu.
 %
 \subsection{\gls{EQCO2} als optimale Methode}
 %
-75~\% der mit der ersten Algorithmus-Version generierten \gls{EQCO2}-Grafiken wurden jedoch bereits als gut kategorisiert. Die Ergebnisse dieser Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste mittlere Differenz der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe. Abb. \ref{pic:pic26}). Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Je dichter $r$ am Wert eins liegt, desto mehr korrelieren die Schwellenbestimmungen und desto eindeutiger ist die Methode zur Schwellenbestimmung anwendbar. Mit $0,912$ ist der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert 1 und im Vergleich mit den anderen Methoden am besten.
+75~\% der mit der ersten Algorithmus-Version generierten \gls{EQCO2}-Grafiken wurden jedoch bereits als gut kategorisiert. Die Ergebnisse dieser Methode brachte im Vergleich zwischen den Ratern sowie diesen und der Software die geringste Durchschnittsabweichung der VT2 mit \SI{-3,02}{\per\minute} $\pm$\SI{6}{\per\minute} hervor (siehe. Abb. \ref{pic:pic26}). Als zusätzliches Vergleichsinstrument wurde aus den Ergebnissen von Ratern und Software der Korrelationskoeffizient $r$ für jede Methode bestimmt. Je dichter $r$ am Wert eins liegt, desto mehr korrelieren die Schwellenbestimmungen und desto eindeutiger ist die Methode zur Schwellenbestimmung anwendbar. Mit $0,912$ ist der Korrelationskoeffizient für das \gls{EQCO2} sehr nah am Wert 1 und im Vergleich mit den anderen Methoden am besten.
 %
 \begin{figure}[H]
 	\centering
@@ -65,17 +65,17 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 	\label{pic:pic28}
 \end{figure}
 %
-Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die gute Korrelation mit dem Bestimmheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch.\\
-Einen guten Plot zeigt beispielhaft Abb. \ref{pic:pic20}, bei der ein deutlicher Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen, im Ganzen betrachtet, relativ häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
+Die Regressionsgerade in Abb. \ref{pic:pic28} zeigt die hohe Korrelation mit dem Bestimmheitsmaß $R^2 = 0,83$ zwischen Ratern und Software bei der mit \gls{EQCO2} bestimmten VT2 noch einmal grafisch.\\
+Einen guten Plot stellt beispielhaft Abb. \ref{pic:pic20} dar, bei der ein deutlicher Anstieg der \gls{EQCO2}-Kurve beobachtet werden kann. In Abb. \ref{subpic:pic3} ist zu sehen, dass die Differenzen zwischen den beiden Ratern und auch zwischen den Ratern und der Software im Allgemeinen dennoch relativ gering waren. Die drei Netze liegen, im Ganzen betrachtet, relativ häufig sehr nah übereinander. Abb. \ref{pic:pic26} zeigt dazu, dass bei lediglich fünf Probanden Differenzen >\SI{10}{\per\minute} zu beobachten sind.\\
 Interessant ist allerdings, dass in Abb. \ref{pic:pic17} bei Probandin 6w ein solch eindeutiger Anstieg des \gls{EQCO2} zu sehen ist, Abb. \ref{subpic:pic3} jedoch entnehmbar ist, dass zwischen Rater 1 und Rater 2 sowie der Software eine relativ große Differenz bei der Schwellenbestimmung existiert. Rater 1 detektierte die VT2 eine Stufe früher, wo in Abb. \ref{pic:pic17} bereits ein \gls{EQCO2}-Anstieg in der orangen Kurve zu sehen ist. Dieser war für Rater 2 eventuell noch nicht signifikant. Die Software bestimmte die VT2 später, da der Wert mit den Referenzdaten der HUNT 3 Studie mehr übereinstimmte. Die Mittelung der Werte je Stufe könnte hier zu einem leichten Anstieg zwischen zwei Messpunkten führen, der noch nicht auf das Exzess-\gls{CO2} zurückzuführen ist. Die Oxygen Delay Time $\tau$ zwischen Steigerung der Leistung zu Beginn einer neuen Stufe und der respiratorischen Reaktion beträgt bei kleinen Inkrementen ca. \SI{45}{\second}~\cite{Kroidl.2015}. Bei einer Stufendauer von \SI{2}{\minute} kann somit davon ausgegangen werden, dass die physiologische Reaktion auf die Leistungssteigerung zu Beginn der Respirationsmessung nach \SI{90}{\second} bereits eingetreten ist. Vergleicht man die VT2 von Rater 1 bei \SI{130}{\per\minute} mit der \gls{HFmax} der Probandin bei \SI{178}{\per\minute}, entspricht die Schwelle 73~\%~\gls{HFmax}. Laut der HUNT 3 Studie liegt die durchschnittliche VT2 für gesunde Frauen zwischen 40 und 49 Jahren bei 90~\%~\gls{HFmax}$\pm$6~\%. Dementsprechend ist die VT2 von Rater 1 zu früh bestimmt worden.\\
 Es gab wenige kritische \gls{EQCO2}-Kurven, in denen wechselnde Schwankungen zwischen positiver und negativer Steigung auftraten, sodass bei der optischen Auswertung die entscheidende \gls{EQCO2}-Zunahme nicht einfach erkennbar war. Dies ist beispielsweise bei Proband 8m in Abb. \ref{pic:pic18} der Fall. Die Kurve steigt im letzten Drittel des Plots zweimal an und fällt dazwischen einmal. Infolgedessen kam es zu unterschiedlichen Bestimmungen der VT2 durch die Rater, wie Abb. \ref{subpic:pic3} zeigt.
 %
 \subsection{\gls{VE}/\gls{VCO2} als geeignete Referenzmethode}
 %
-Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute} und die \gls{SD} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m. In der ersten Hälfte der Messung sind zwar einige sehr dicht gelegene Messpunkte zu erkennen, doch in der zweiten Hälfte, in der VT2 nur angenommen werden, ist die Zunahme der \gls{VCO2} deutlich zu sehen. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
+Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute} und die \gls{SD} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m. In der ersten Hälfte der Messung sind zwar einige sehr dicht gelegene Messpunkte zu erkennen, doch in der zweiten Hälfte, in der die VT2 angenommen werden kann, ist die Zunahme der \gls{VCO2} deutlich zu sehen. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
 Einige Kurven waren jedoch kritisch, da nicht differenzierbar. Bei dieser Methode wirkten diese Artefakte sich allerdings nicht so stark auf die Schwellenbestimmung aus, da sie, wie z.B. in Abb. \ref{pic:pic21} zu erkennen, ausschließlich in der ersten Messhälfte auftraten. Im Bereich der VT2 waren die Verläufe der Graphen meistens gut auszuwerten.\\
 Jedoch traten auch in Feld 4 häufiger Plots auf, bei denen die Messpunkte dicht beieinander lagen und nicht genau ersichtlich war, in welcher Stufe der erste Anstieg auftrat. Hier kann beispielhaft Abb. \ref{pic:pic19} von Proband 9m gesichtet werden. Da der Graph in Feld 4 recht linear verläuft, war die subjektive Auswertung erschwert und die Rater bestimmten die VT2 später als die Software, die erneut den Vorteil der mathematischen Detektion der Steigung innehat.\\
-Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass sie in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und die Methode somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten und mehr korrelierenden Ergebnissen führen. Gegebenenfalls kann diese Methode künftig als Referenzmethode für die VT2-Bestimmung in die Software integriert werden.
+Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass sie in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und die Methode somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten und mehr korrelierenden Ergebnissen führen. Gegebenenfalls kann diese Methode künftig als Referenzmethode für die VT2-Bestimmung in die Software integriert werden.
 %
 \subsection{Problematik bei der Bestimmung der VT1}
 %
